--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.1 2004/04/03 17:58:06 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.2 2004/04/24 17:17:58 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -110,7 +110,7 @@
 
     <li class="add">Added selectUser() method to Access_Query class</li>
 
-    <li class="add">Added $Id: changelog.html,v 1.1 2004/04/03 17:58:06 jact Exp $ string in header of all SQL files</li>
+    <li class="add">Added Id CVS variable in header of all SQL files</li>
 
     <li class="change">Supression of javascript protocol in href attributes</li>
 
@@ -131,6 +131,10 @@
     <li class="add">Added affectedRows() method to Query class</li>
 
     <li class="change">Changes in input_lib.php file (new parameter $disabled in showCheckBox and showRadioButton functions, $events paremeter becomes $addendum)</li>
+
+    <li class="change">No GET values to *_del.php files</li>
+
+    <li class="change">existLogin() method has changed idUser parameter for idMember</li>
   </ul>
 
   <hr />
@@ -164,7 +168,7 @@
 
     <li class="change">Files named noauth.php are no_authorization.php now</li>
 
-    <li class="add">Added $Id: changelog.html,v 1.1 2004/04/03 17:58:06 jact Exp $ string in header of all PHP, HTML and JavaScript files</li>
+    <li class="add">Added Id CVS variable in header of all PHP, HTML and JavaScript files</li>
 
     <li class="add">Added new files to the project: admin/staff_validate_post.php, admin/theme_validate_post.php, admin/user_validate_post.php, medical/patient_validate_post.php, medical/problem_validate_post.php, medical/test_validate_post.php</li>
 
