--- a/coding_guidelines.html
+++ b/coding_guidelines.html
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: coding_guidelines.html,v 1.1 2004/04/03 17:58:42 jact Exp $ -->
+<!-- $Id: coding_guidelines.html,v 1.2 2004/04/24 17:31:55 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
+<title>OpenClinic Coding Guidelines</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
 <meta http-equiv="imagetoolbar" content="no" />
@@ -18,13 +20,11 @@
 
 <meta name="description" content="OpenClinic is an easy to use, open source, medical records system written in PHP" />
 
-<link rel="stylesheet" type="text/css" href="./css/style.css" />
+<link rel="stylesheet" type="text/css" href="./css/style.css" title="OpenClinic" />
 
 <link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
 
 <link rel="bookmark icon" type="image/png" href="./images/miniopc.png" />
-
-<title>OpenClinic Coding Guidelines</title>
 </head>
 <body id="top">
 <!-- OpenClinic logo and black background -->
