--- a/install.html
+++ b/install.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: install.html,v 1.2 2004/04/24 17:31:55 jact Exp $ -->
+<!-- $Id: install.html,v 1.3 2004/04/24 17:52:40 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Install Instructions</title>
@@ -201,7 +201,7 @@ C:\&gt;<strong>C:\mysql\bin\mysql -u <em>openclinic_user</em> -p<em>openclinic_p
   </ul>
 </div><!-- End .links -->
 
-<div id="footer" class="small">
+<div id="footer">
   Powered by OpenClinic
   <br />
   Copyright &copy; 2002-2004 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
