Modificaciones hasta 15 de Mayo de 2004

--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.4 2004/04/24 17:52:39 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.5 2004/05/16 18:13:04 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Changelog</title>
@@ -135,6 +135,14 @@
     <li class="change">No GET values to *_del.php files</li>
 
     <li class="change">existLogin() method has changed idUser parameter for idMember</li>
+
+    <li class="fix">Logout link in timeout session</li>
+
+    <li class="change">If items per page equal to zero, searchs return all results without pagination</li>
+
+    <li class="change">Function getFiles() has a new parameter to indicate allowed extensions of files</li>
+
+    <li class="change">Better i18n of dates</li>
   </ul>
 
   <hr />
