--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.5 2004/05/16 18:13:04 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.6 2004/05/20 19:16:26 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Changelog</title>
@@ -130,7 +130,7 @@
 
     <li class="add">Added affectedRows() method to Query class</li>
 
-    <li class="change">Changes in input_lib.php file (new parameter $disabled in showCheckBox and showRadioButton functions, $events paremeter becomes $addendum)</li>
+    <li class="change">Changes in input_lib.php file (new parameter $disabled in showCheckBox and showRadioButton functions, $events paremeter becomes $addendum, new parameter $error in showSelectArray function)</li>
 
     <li class="change">No GET values to *_del.php files</li>
 
