--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.3 2004/04/24 17:52:39 jact Exp $ -->
+<!-- $Id: index.html,v 1.4 2004/06/06 11:44:26 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -141,11 +141,11 @@
 
   <ul>
     <li>
-      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <span class="note">compiled with MySQL support</span> (tested with versions 4.2.1, 4.2.2, 4.2.3, 4.3, 4.3.1, 4.3.2, 4.3.3 and 4.3.4);
+      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <span class="note">compiled with MySQL support</span> (tested with versions 4.2.1, 4.2.2, 4.2.3, 4.3, 4.3.1, 4.3.2, 4.3.3, 4.3.4 and 4.3.6);
     </li>
 
     <li>
-      MySQL (tested with versions 3.23.36, 3.23.49, 3.23.51, 3.23.52, 3.23.54 and 3.23.55);
+      MySQL (tested with versions 3.23.36, 3.23.49, 3.23.51, 3.23.52, 3.23.54, 3.23.55, 4.0.16 and 4.0.18);
     </li>
 
     <li>
