--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.7 2004/07/03 21:16:44 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.8 2004/07/11 11:28:21 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Changelog</title>
@@ -90,7 +90,7 @@
 
   <h2 id="c-06"><a href="#top" title="To top of the page">Changes since 0.6</a></h2>
 
-  <ul>
+  <ol>
     <li class="add">Session has an own name</li>
 
     <li class="fix">Action delete had been actived if login of the current user was changed</li>
@@ -113,7 +113,7 @@
 
     <li class="change">Supression of javascript protocol in href attributes</li>
 
-    <li class="add">New file lib/misc_lib.php: new global constant FIELD_PREVIEW_LIMIT</li>
+    <li class="add">New file lib/misc_lib.php: new global constant OPEN_FIELD_PREVIEW_LIMIT</li>
 
     <li class="add">Added new theme to the project: mezzoblue</li>
 
@@ -160,13 +160,23 @@
     <li class="change">Profiles option in admin tab has been removed (and profile_tbl from database too)</li>
 
     <li class="fix">MSIE bugs relationship with table less design</li>
-  </ul>
+
+    <li class="fix">All application constants have OPEN_ or STYLE_ or DLIB_ prefix to avoid interferences with PHP constants</li>
+
+    <li class="add">New function showFetchError() in lib/error_lib.php file (changes in DbConnection and Query classes)</li>
+
+    <li class="change">errorOccurred() method changes name to isError() in Query class</li>
+
+    <li class="fix">user_edit.php redirects correctly now to user_edit_form.php in case of error</li>
+
+    <li class="fix">Redirections to avoid reload problem in insertions, updates or deletions processes</li>
+  </ol>
 
   <hr />
 
   <h2 id="c-05"><a href="#top" title="To top of the page">Changes since 0.5</a></h2>
 
-  <ul>
+  <ol>
     <li class="add">Added new themes to the project: LibXML, SerialZ, Closer, GG Interactive</li>
 
     <li class="change">Changes in DbConnection class (documentation)</li>
@@ -250,13 +260,13 @@
     <li class="fix">In login_form.php direct connections, it redirects to home/index.php now</li>
 
     <li class="change">Changes in input_lib.php functions parameters</li>
-  </ul>
+  </ol>
 
   <hr />
 
   <h2 id="c-04"><a href="#top" title="To top of the page">Changes since 0.4</a></h2>
 
-  <ul>
+  <ol>
     <li class="add">Added install/wizard.php file to the project</li>
 
     <li class="add">Added css/wizard.css file to the project</li>
@@ -290,13 +300,13 @@
     <li class="add">Added scripts/wizard.js file to the project</li>
 
     <li class="add">Added nl2br() function to medical/*_view.php files</li>
-  </ul>
+  </ol>
 
   <hr />
 
   <h2 id="c-03"><a href="#top" title="To top of the page">Changes since 0.3</a></h2>
 
-  <ul>
+  <ol>
     <li class="add">Added bulgarian language (pazoff)</li>
 
     <li class="add">Added showNavLinks() function (shared/navigation_links.php file)</li>
@@ -358,13 +368,13 @@
     <li class="add">Added emulation of transactions in critical operations (ignore_user_abort function)</li>
 
     <li class="add">Added coding_guidelines.html file to the project</li>
-  </ul>
+  </ol>
 
   <hr />
 
   <h2 id="c-02"><a href="#top" title="To top of the page">Changes since 0.2</a></h2>
 
-  <ul>
+  <ol>
     <li class="change">Visual improvements (CSS)</li>
 
     <li class="fix">Fixed medical/relative_list.php errors (medical/patient_del.php)</li>
@@ -390,13 +400,13 @@
     <li class="add">Added getLastId() method to the Problem_Query class</li>
 
     <li class="add">Added getLastId() method to the Test_Query class</li>
-  </ul>
+  </ol>
 
   <hr />
 
   <h2 id="c-01"><a href="#top" title="To top of the page">Changes since 0.1</a></h2>
 
-  <ul>
+  <ol>
     <li class="fix">Fixed medical/problem_edit_form.php errors</li>
 
     <li class="change">Improved date format</li>
@@ -432,7 +442,7 @@
     <li class="add">Added historic tables: deleted_patient_tbl, deleted_problem_tbl</li>
 
     <li class="fix">Fixed date format errors</li>
-  </ul>
+  </ol>
 </div><!-- End #content -->
 
 <div class="links">
