--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.5 2004/07/03 21:15:52 jact Exp $ -->
+<!-- $Id: index.html,v 1.6 2004/08/07 11:13:42 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -98,18 +98,16 @@
     <li>Medical Records
       <p>Use this option to manage your patient's medical records.</p>
 
+      <p>Patient's Administration:</p>
+
       <ul>
-        <li>Patient's Administration:
-          <ul>
-            <li>Search, new, delete, edit</li>
+        <li>Search, new, delete, edit</li>
 
-            <li>Social Data</li>
+        <li>Social Data</li>
 
-            <li>Clinic History</li>
+        <li>Clinic History</li>
 
-            <li>Problem Reports</li>
-          </ul>
-        </li>
+        <li>Problem Reports</li>
       </ul>
     </li>
 
@@ -125,8 +123,6 @@
 
         <li>System Users</li>
 
-        <li>User profiles</li>
-
         <li>Dumps</li>
 
         <li>Log Statistics</li>
@@ -140,7 +136,7 @@
 
   <ul>
     <li>
-      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <span class="note">compiled with MySQL support</span> (tested with versions 4.2.1, 4.2.2, 4.2.3, 4.3, 4.3.1, 4.3.2, 4.3.3, 4.3.4 and 4.3.6);
+      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <span class="note">compiled with MySQL support</span> (tested with versions 4.2.* and 4.3.*);
     </li>
 
     <li>
