--- a/demo_version.html
+++ b/demo_version.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: demo_version.html,v 1.4 2004/07/03 21:15:52 jact Exp $ -->
+<!-- $Id: demo_version.html,v 1.5 2004/08/23 18:32:28 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>Demo Version Features</title>
@@ -67,7 +67,7 @@
   <h2 id="enable"><a href="#top" title="To top of the page">Enable/Disable Demo</a></h2>
 
   <p>
-    To enable/disable OpenClinic demo behavior there must be set as <tt class="literal">true</tt> or <tt class="literal">false</tt> the constant <tt class="literal">OPEN_DEMO</tt> in file <span class="note"><tt class="literal">shared/read_settings.php</tt></span>.
+    To enable/disable OpenClinic demo behavior there must be set as <tt>true</tt> or <tt>false</tt> the constant <tt>OPEN_DEMO</tt> in file <tt class="note">shared/read_settings.php</tt>.
   </p>
 
 <pre class="programlisting">
@@ -97,7 +97,7 @@ define("OPEN_DEMO", <span class="note">true</span>); // demo version
 
     <li><span class="note">Admin &raquo; Logs Statistics</span> - Log tables would not be used.</li>
 
-    <li>In <span class="note">Medical Records</span> tab doesn't exist a list of 3 last viewed patients.</li>
+    <li>In <span class="note">Medical Records</span> tab doesn't exist a list of lastest viewed patients.</li>
 
     <li>In <span class="note">Medical Records</span> tab can't manage <span class="note">medical problem tests</span> because server's space disk is limited.</li>
 
