--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.9 2004/08/12 11:43:43 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.10 2004/08/28 16:32:59 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Changelog</title>
@@ -111,7 +111,7 @@
 
     <li class="add">Added Id CVS variable in header of all SQL files</li>
 
-    <li class="change">Supression of javascript protocol in href attributes</li>
+    <li class="change">Suppression of javascript protocol in href attributes</li>
 
     <li class="add">New file lib/misc_lib.php: new global constant OPEN_FIELD_PREVIEW_LIMIT</li>
 
@@ -486,7 +486,7 @@
 </div><!-- End #footer -->
 
 <div class="logos">
-  <a href="http://validator.w3.org/check/referer"><img src="./images/valid-xhtml11.png" alt="Valid XHTML 1.1" title="Valid XHTML 1.1" width="88" height="31" /></a>
+  <a href="http://validator.w3.org/check/referer"><img src="./images/valid-xhtml11.png" alt="Valid XHTML 1.1" title="Valid XHTML 1.1" width="80" height="15" /></a>
 </div><!-- End .logos -->
 </body>
 </html>
