Se recomienda el uso de Apache como servidor web, dado que en otros, como IIS, puede que no existan variables del servidor que usa el programa (SCRIPT_FILENAME es una de ellas)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.7 2004/08/28 16:32:40 jact Exp $ -->
+<!-- $Id: index.html,v 1.8 2004/10/16 14:53:53 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -144,7 +144,7 @@
     </li>
 
     <li>
-      a web server prepared to execute PHP code;
+      a web server prepared to execute PHP code (recommended <a href="http://httpd.apache.org/">Apache</a>);
     </li>
 
     <li>
