Actualizada la fecha de Copyright para incluir el 2005

--- a/coding_guidelines.html
+++ b/coding_guidelines.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: coding_guidelines.html,v 1.7 2004/08/28 16:32:40 jact Exp $ -->
+<!-- $Id: coding_guidelines.html,v 1.8 2005/01/31 19:56:51 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Coding Guidelines</title>
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2004 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2005 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -27,7 +27,7 @@
 </head>
 <body id="top">
 <!-- OpenClinic logo and black background -->
-<div id="header"><span class="headerLHS"><a href="http://openclinic.sourceforge.net"><img src="./images/openclinic-1.png" width="291" height="58" alt="Link to OpenClinic site" title="Link to OpenClinic site" /></a></span><!-- End .headerLHS --><a href="http://sourceforge.net" title="SourceForge.net Logo"><img src="./images/sf-logo2.png" width="210" height="58" alt="SourceForge.net Logo" /></a></div><!-- End #header -->
+<div id="header"><span class="headerLHS"><a href="http://openclinic.sourceforge.net"><img src="./images/openclinic-1.png" width="291" height="58" alt="OpenClinic site" title="OpenClinic site" /></a></span><!-- End .headerLHS --><a href="http://sourceforge.net" title="SourceForge.net Logo"><img src="./images/sf-logo2.png" width="210" height="58" alt="SourceForge.net Logo" /></a></div><!-- End #header -->
 
 <div class="links">
   <ul class="linkList">
@@ -617,7 +617,7 @@ collegiate_number, first_name, phone_contact, login
 <div id="footer">
   Powered by OpenClinic
   <br />
-  Copyright &copy; 2002-2004 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
+  Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
   <br />
   under the <a href="./LICENSE">GNU General Public License</a>
 </div><!-- End #footer -->
