--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.8 2004/10/16 14:53:53 jact Exp $ -->
+<!-- $Id: index.html,v 1.9 2005/01/31 19:57:15 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2004 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2005 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -27,7 +27,7 @@
 </head>
 <body id="top">
 <!-- OpenClinic logo and black background -->
-<div id="header"><span class="headerLHS"><a href="http://openclinic.sourceforge.net"><img src="./images/openclinic-1.png" width="291" height="58" alt="Link to OpenClinic site" title="Link to OpenClinic site" /></a></span><!-- End .headerLHS --><a href="http://sourceforge.net" title="SourceForge.net Logo"><img src="./images/sf-logo2.png" width="210" height="58" alt="SourceForge.net Logo" /></a></div><!-- End #header -->
+<div id="header"><span class="headerLHS"><a href="http://openclinic.sourceforge.net"><img src="./images/openclinic-1.png" width="291" height="58" alt="OpenClinic site" title="OpenClinic site" /></a></span><!-- End .headerLHS --><a href="http://sourceforge.net" title="SourceForge.net Logo"><img src="./images/sf-logo2.png" width="210" height="58" alt="SourceForge.net Logo" /></a></div><!-- End #header -->
 
 <div class="links">
   <ul class="linkList">
@@ -148,7 +148,7 @@
     </li>
 
     <li>
-      and, of course, a web browser (with JavaScript and good CSS2 support). Recommended Mozilla or Opera (in its newer version). Advice: Microsoft Interner Explorer could not show application pages accurate.
+      and, of course, a web browser (with JavaScript and good CSS2 support). Recommended <a href="http://www.mozilla.org/">Mozilla</a> or <a href="http://www.mozilla.org/products/firefox/">Firefox</a>. Advice: Microsoft Interner Explorer could not show application pages accurate.
     </li>
   </ul>
 
@@ -167,7 +167,7 @@
 
     <li>License: <a href="./LICENSE">GNU General Public License (GPL)</a></li>
 
-    <li>Natural Language: English, Spanish, Bulgarian</li>
+    <li>Natural Language: English, Spanish, Bulgarian, Dutch, Traditional Chinese</li>
 
     <li>Operating System: OS Independent</li>
 
@@ -189,7 +189,7 @@
   <h2 id="down"><a href="#top" title="To top of the page">Download</a></h2>
 
   <p>
-    You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">http://sourceforge.net</a>
+    You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Sourceforge</a>
   </p>
 
   <hr />
@@ -197,7 +197,7 @@
   <h2 id="devel"><a href="#top" title="To top of the page">Developers Information</a></h2>
 
   <p>
-    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.jachavar&#64;terra.es">jachavar&#64;terra.es</a>&gt;
+    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.jachavar&#64;terra.es">jachavar at terra dot es</a>&gt;
   </p>
 
   <ul>
@@ -209,7 +209,7 @@
   </ul>
 
   <p>
-    [eco] - Emilio M. Cazcarra &lt;<a href="mailto:CUT-THIS.eco3d&#64;yahoo.es">eco3d&#64;yahoo.es</a>&gt;
+    [eco] - Emilio M. Cazcarra &lt;<a href="mailto:CUT-THIS.eco3d&#64;yahoo.es">eco3d at yahoo dot es</a>&gt;
   </p>
 
   <ul>
@@ -219,11 +219,27 @@
   </ul>
 
   <p>
-    [pazoff] - Plamen Rumenov Vatev &lt;<a href="mailto:CUT-THIS.pazoff&#64;yahoo.com">pazoff&#64;yahoo.com</a>&gt;
+    [pazoff] - Plamen Rumenov Vatev &lt;<a href="mailto:CUT-THIS.pazoff&#64;yahoo.com">pazoff at yahoo dot com</a>&gt;
   </p>
 
   <ul>
-    <li>bulgarian translator</li>
+    <li>bulgarian (bg_BG) translator: 0.3, 0.4, 0.5 versions</li>
+  </ul>
+
+  <p>
+    [dirk] - Dirk De Naegel &lt;<a href="mailto:CUT-THIS.dirk.de.naegel&#64;scarlet.be">dirk dot de dot naegel at scarlet dot be</a>&gt;
+  </p>
+
+  <ul>
+    <li>dutch (nl_BE) translator: 0.6, 0.7 versions</li>
+  </ul>
+
+  <p>
+    [senz] - Eric Tang &lt;<a href="mailto:CUT-THIS.senzhk&#64;gmail.com">senzhk at gmail dot com</a>&gt;
+  </p>
+
+  <ul>
+    <li>traditional chinese (zh_TW BIG5) translator: 0.7 version</li>
   </ul>
 
   <hr />
@@ -260,7 +276,7 @@
 <div id="footer">
   Powered by OpenClinic
   <br />
-  Copyright &copy; 2002-2004 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
+  Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
   <br />
   under the <a href="./LICENSE">GNU General Public License</a>
 </div><!-- End #footer -->
